changed field from type to kind

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @notes.each do |note| %>
       <tr>
-        <td><%= note.type %></td>
+        <td><%= note.kind %></td>
         <td><%= note.component %></td>
         <td><%= note.description %></td>
         <td><%= note.wiki %></td>
