--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @note.type %>
+  <strong>Kind:</strong>
+  <%= @note.kind %>
 </p>
 
 <p>
