--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.select :type, [["Teste", 1]], include_blank: true %>
+    <%= f.label :kink %><br>
+    <%= f.select :kind, [["Teste", 1]], include_blank: true %>
   </div>
   <div class="field">
     <%= f.label :component_id %><br>
