--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,33 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Notes</h1>
+<div class="panel panel-primary">
+  <div class="panel-heading"><h1>Listing Notes</h1></div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Type</th>
-      <th>Component</th>
-      <th>Description</th>
-      <th>Wiki</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @notes.each do |note| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= note.kind %></td>
-        <td><%= note.component %></td>
-        <td><%= note.description %></td>
-        <td><%= note.wiki %></td>
-        <td><%= link_to 'Show', note %></td>
-        <td><%= link_to 'Edit', edit_note_path(note) %></td>
-        <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Type</th>
+        <th>Component</th>
+        <th>Description</th>
+        <th>Wiki</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @notes.each do |note| %>
+        <tr>
+          <td><%= note.kind %></td>
+          <td><%= note.component %></td>
+          <td><%= note.description %></td>
+          <td><%= note.wiki %></td>
+          <td><%= link_to 'Show', note %></td>
+          <td><%= link_to 'Edit', edit_note_path(note) %></td>
+          <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Note', new_note_path %>
+  <br>
+
+  <%= link_to 'New Note', new_note_path, class: "btn btn-primary" %>
+</div>
