--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -22,8 +22,8 @@
           <td><%= note.description %></td>
           <td><%= link_to note.wiki, note.wiki %></td>
           <td><%= link_to 'Show', note %></td>
-          <td><%= link_to 'Edit', edit_note_path(note) %></td>
-          <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_note_path(note) if signed_in? %></td>
+          <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } if signed_in? %></td>
         </tr>
       <% end %>
     </tbody>
@@ -31,5 +31,5 @@
 
   <br>
 
-  <%= link_to 'New Note', new_note_path, class: "btn btn-primary" %>
+  <%= link_to 'New Note', new_note_path, class: "btn btn-primary" if signed_in? %>
 </div>
