changed class to centered

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -32,6 +32,12 @@ div {
   margin: 2em;
 }
 
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .field input {
   width: 300px;
 }
