--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,19 +1,21 @@
-<p>
-  <strong>Kind:</strong>
-  <%= @note.kind %>
-</p>
+<div class="centered">
+	<p>
+	  <strong>Kind:</strong>
+	  <%= @note.kind_description %>
+	</p>
 
-<p>
-  <strong>Component:</strong>
-  <%= @note.component %>
-</p>
+	<p>
+	  <strong>Component:</strong>
+	  <%= @note.component %>
+	</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @note.description %>
-</p>
+	<p>
+	  <strong>Description:</strong>
+	  <%= @note.description %>
+	</p>
 
-<p>
-  <strong>Wiki:</strong>
-  <%= @note.wiki %>
-</p>
+	<p>
+	  <strong>Wiki:</strong>
+	  <%= @note.wiki %>
+	</p>
+</div>
