--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,6 +6,7 @@
       <tr>
         <th>Type</th>
         <th>Component</th>
+        <th>Ticket</th>
         <th>Description</th>
         <th>Wiki</th>
         <th colspan="3"></th>
@@ -17,6 +18,7 @@
         <tr>
           <td><%= note.kind_description %></td>
           <td><%= note.component %></td>
+          <td><%= note.ticket %></td>
           <td><%= note.description %></td>
           <td><%= link_to note.wiki, note.wiki %></td>
           <td><%= link_to 'Show', note %></td>
