--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -10,6 +10,11 @@
 	</p>
 
 	<p>
+	  <strong>Ticket:</strong>
+	  <%= @note.ticket %>
+	</p>
+
+	<p>
 	  <strong>Description:</strong>
 	  <%= @note.description %>
 	</p>
