--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if signed_in? %>
+          <li><%= link_to 'Sprints', sprints_path %></li>
           <li><%= link_to 'Components', components_path %></li>
         <% end %>
 		    <li><%= link_to 'Notes', notes_path %></li>
