--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
 <div class="centered">
+  <h2>Access denied</h2>
+
+  <!--
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -28,4 +31,5 @@
   <% end %>
 
   <%= render "devise/shared/links" %>
+  -->
 </div>
